// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarMenu renders 1`] = `
<div>
  <div
    class="flex-1 box-border [:where(&)_*]:font-sans [&_*]:[box-sizing:inherit] [&_*::before]:[box-sizing:inherit] [&_*::after]:[box-sizing:inherit]"
  >
    <ul
      class="relative list-none outline-hidden py-2 px-0 m-0 rounded-sm shadow-0 order-1 [&_&]:flex-1 grow-0 shrink-1 max-w"
      role="menu"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`SidebarMenu with bottom 1`] = `
<div>
  <div
    class="flex-1 box-border [:where(&)_*]:font-sans [&_*]:[box-sizing:inherit] [&_*::before]:[box-sizing:inherit] [&_*::after]:[box-sizing:inherit]"
  >
    <ul
      class="relative list-none outline-hidden py-2 px-0 m-0 rounded-sm shadow-0 [&_&]:flex-1 grow-0 shrink-1 max-w order-[99]"
      role="menu"
      tabindex="-1"
    />
  </div>
</div>
`;
